[package]
name = "untisd"
version = "0.1.0"
authors = ["me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" , features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
#reqwest = { version = "0.8.6" }
reqwest = { version = "0.10.7", features = ["json", "blocking"]  }
futures = "0.3.5"
hyper = "0.11.7"
anyhow = "1.0.32"
rusqlite = "0.24.0"
